--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
   "author": "Mak",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^2.2.3",
+    "core-decorators": "^0.12.3",
+    "es6-promise": "^3.2.1",
+    "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.14.1",
+    "normalize.css": "^4.2.0",
     "react": "^15.0.2",
-    "react-dom": "^15.0.2"
+    "react-dom": "^15.0.2",
+    "wilddog": "^0.7.2",
+    "wildreact": "^0.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.8.0",
@@ -31,8 +37,8 @@
     "node-args": "^1.0.2",
     "node-sass": "^3.7.0",
     "react-hot-loader": "^1.3.0",
-    "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
   }
